// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContainer should be rendered correctly 1`] = `
<div
  className="uui-dropdown-body uui-dropdown_container root uui-color-white -lock-focus container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled root uui-button uui-fill-solid uui-color-primary size-36 size-36 style-square"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  />
</div>
`;

exports[`DropdownContainer should be rendered correctly with extra props 1`] = `
<div
  className="uui-dropdown-body uui-dropdown_container root uui-color-night700 -lock-focus container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": 300,
      "minWidth": 200,
    }
  }
  tabIndex={0}
>
  <button
    className="container uui-button-box uui-enabled root uui-button uui-fill-solid uui-color-primary size-36 size-36 style-square"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  />
</div>
`;
